--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
     </nav>
 
-    <section class="container__item start container__part">
+    <section class="container__item start container__part" id="start">
         <header class="start__header">
             <p class="start__subtitle">
                 Easy to use
