--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </button>
         <ul class="navigation__list">
             <li class="navigation__item">
+                <a class="navigation__link" href="#start">Start</a>
+            </li>
+            <li class="navigation__item">
                 <a class="navigation__link" href="#simple">Simple</a>
             </li>
             <li class="navigation__item">
@@ -46,7 +49,7 @@
                 Responsive Landing Page
             </h1>
             <p class="start__description">
-                It is a simple responsive template. I created it using: SCCS, vanillaJS and fontello font. RWD: Grid & Flexbox.
+                It is a simple responsive website template. I created it compliant with the rules DRY, mobile first and BEM methodology, Using SCSS and clear JavaScript.
             </p>
             <form>
                 <button class="start__button" type="submit" formaction="#simple">
@@ -71,7 +74,7 @@
             </section>
             <section class="box__item">
                 <i class="box__icon icon-code"></i>
-                <header class="box__header">Grid & Flexbox</header>
+                <header class="box__header">CSS preprocessor</header>
                 <article class="box__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem impedit voluptatem consequatur recusandae.
                 </article>
@@ -121,7 +124,7 @@
                 <i class="box__icon icon-html5"></i>
                 <header class="box__header">Using:</header>
                 <article class="box__description">
-                    HTML5 sematic. Preprocessor SCSS. CSS Grid & Flexbox. BEM metodology. Fontello font.
+                    HTML5 semantic. Preprocesor SASS. CSS Grid and Flexbox. DRY, BEM methodology. Fontello font.
                 </article>
             </section>
            <section class="box__item">
@@ -162,18 +165,22 @@
                 <section class="offer__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, at! Odit, excepturi.
                 </section>
-                <ul class="offer__list">
-                    <li class="offer__item">
-                        HTML5 semanitc
+                <ul class="offer__list list">
+                    <li class="list__item">
+                        <i class="list__icon icon-ok"></i>
+                        HTML5 semantic
                     </li>
-                    <li class="offer__item">
+                    <li class="list__item">
+                        <i class="list__icon icon-ok"></i>
                         BEM metodology
                     </li>
-                    <li class="offer__item">
-                        SCSS preprocessor
+                    <li class="list__item list__item--inactive">
+                        <i class="icon-cancel"></i>
+                        CSS preprocessor
                     </li>
-                    <li class="offer__item">
-                        CSS Grid & Flexbox
+                    <li class="list__item list__item--inactive">
+                        <i class="icon-cancel"></i>
+                        Clear JavaScript
                     </li>
                 </ul>
                 <button type="button" class="offer__button">
@@ -191,19 +198,22 @@
                 <section class="offer__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, at! Odit, excepturi.
                 </section>
-                <ul class="offer__list">
-                    <li class="offer__item">
-                        <i class="box__icon icon-ok"></i>
-                        HTML5 semanitc
+                <ul class="offer__list list">
+                    <li class="list__item">
+                        <i class="list__icon icon-ok"></i>
+                        HTML5 semantic
                     </li>
-                    <li class="offer__item">
+                    <li class="list__item">
+                        <i class="list__icon icon-ok"></i>
                         BEM metodology
                     </li>
-                    <li class="offer__item">
-                        SCSS preprocessor
+                    <li class="list__item">
+                        <i class="list__icon icon-ok"></i>
+                        CSS preprocessor
                     </li>
-                    <li class="offer__item">
-                        CSS Grid & Flexbox
+                    <li class="list__item">
+                        <i class="list__icon icon-ok"></i>
+                        Clear JavaScript
                     </li>
                 </ul>
                 <button type="button" class="offer__button">
